# openapi/src/main/kotlin/id/my/smartdoorlock/openapi/models/TriggerRFIDModeResponse.kt
@@ -1,0 +1,37 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package id.my.smartdoorlock.openapi.models
+
+
+import com.google.gson.annotations.SerializedName
+
+/**
+ * 
+ *
+ * @param message 
+ */
+
+
+data class TriggerRFIDModeResponse (
+
+    @SerializedName("message")
+    val message: kotlin.String? = null
+
+) {
+
+
+}
+
